<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000"
        android:alpha="0.75">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:paddingBottom="100dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hola"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textColor="#FFFFFF"
            android:textSize="13dp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrate1"
            android:textColor="#FFFFFF"
            android:textSize="13dp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton"
            android:text="@string/cuenta"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta"
            android:textColor="#FFFFFF"
            android:textSize="13dp"
            android:textAlignment="center"
            android:layout_marginTop="18dp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton1"
            android:text="@string/sesion"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>
